--- a/intro.tex
+++ b/intro.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 \label{sec:intro}
-\fix{Dropped Jim's initial email here. Mostly Jim and Christian}
+\fix{Dropped Jim's initial email here.}
 The Cray XK7 Titan is rapidly nearing its decommissioning date for
 DOE/ASCR. The last production runs will be in July of this year, and
 then we will stop services, clean up a few things and turn it off. 
@@ -55,3 +55,5 @@ new 11,000 parts versus the continued failure of the remaining 6000.
  
 George, Christian-  any interest in this? Barney gave it a thumbs
 up. I think this is a timely and very interesting topic. 
+
+\fix{Need a description of Titan GPU events timeline. Jim or Don?}
