--- a/survival.tex
+++ b/survival.tex
@@ -1,6 +1,6 @@
 \section{Survival Analysis}
 \label{sec:survival}
-\fix{George's survival analysis}
+\fix{George's survival analysis, check \protect\pkg{finalfit}} 
 
 
 Kaplan-Meier survival analysis gives the probability of survival beyond a given time. It is a nonparametric technique that makes no specific failure model assumptions, such as Weibull, Exponential, etc. It can also split the data into subpopulations and compute separate survival curves.
@@ -18,7 +18,7 @@ A sister concept to the survival function is the hazard function:
 which is what is sometimes called the "bathtub" curve in reliability.
 
 
-The Cox proportional hazards (CPH) regression analys takes the hazard function above and a set of covariates $x$ and models $k$s GPU hazard as
+The Cox proportional hazards (CPH) regression analys \cite{Cox1972,Harrell2015} takes the hazard function above and a set of covariates $x$ and models $k$s GPU hazard as
 \begin{displaymath}
   H_k(t) = H_0(t)e^{\sum\limits_{i=1}^n{\beta x}}
 \end{displaymath}
