Started adding related work and references

--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,12 @@
 \usepackage[section]{placeins}
 \usepackage{amsmath}
 \usepackage{xcolor}
+\usepackage[pdftex,
+            bookmarksopen=true,
+            colorlinks,
+            linkcolor={black},
+            citecolor={black},
+            urlcolor={black}]{hyperref}
 \newcommand{\fix}[1]{\textcolor{red}{#1}}
 \newcommand{\pkg}[1]{{\tt #1}}
 
