Added slightly more related work and references

--- a/refs.bib
+++ b/refs.bib
@@ -269,3 +269,16 @@ keywords={checkpointing;parallel machines;lazy checkpointing;failure temporal lo
 doi={10.1109/DSN.2014.101}, 
 ISSN={2158-3927}, 
 month={June},}
+
+@INPROCEEDINGS{8809553, 
+author={S. {Di} and H. {Guo} and E. {Pershey} and M. {Snir} and F. {Cappello}}, 
+booktitle={2019 49th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)}, 
+title={Characterizing and Understanding HPC Job Failures Over The 2K-Day Life of IBM BlueGene/Q System}, 
+year={2019}, 
+volume={}, 
+number={}, 
+pages={473-484}, 
+keywords={fault tolerant computing;mainframes;multiprocessing systems;parallel machines;parallel processing;resource allocation;statistical distributions;Weibull distribution;job executions;core-hours;failed jobs;similarity-based event-filtering analysis;2k-day life;failure features;large-scale system maintenance;service quality;powerful supercomputers;multiple data sources;serviceability log;job scheduling log;behavior log;in-depth analysis;job-scheduling log;user behavior;job execution structure;HPC job failures;reliability availability and serviceability log;RAS;Supercomputers;Task analysis;Correlation;Reliability;Cobalt;Large-scale systems;Resilience;IBM BlueGene/Q System;Fault Tolerance;Failure Analysis;Supercomputer}, 
+doi={10.1109/DSN.2019.00055}, 
+ISSN={1530-0889}, 
+month={June},}
