--- a/related.tex
+++ b/related.tex
@@ -10,7 +10,7 @@ Nie et al.~\cite{nie17characterizing,nie18machine} characterized the soft error 
 %
 Tiwari et al. and Nie et al. did not address the failure mode discussed in this paper.
 %
-Zimmer et al.~\cite{8665764} developed a new job scheduling strategy for Titan to counter the GOU failures discussed in this paper and to improve system utilization and productivity.
+Zimmer et al.~\cite{8665764} developed a new job scheduling strategy for Titan to counter the GPU failures discussed in this paper and to improve system utilization and productivity.
 
 
 Work by Kumar et al.~\cite{kumar18understanding} analyzed Titan's interconnect faults, errors and congestion events to improve interconnects resilience and congestion resolution methods.
@@ -20,3 +20,7 @@ Gupta et al.~\cite{gupta17failures} performed a study covering five supercompute
 Bautista-Gomez et al.~\cite{bautista-gomez16reducing} used failure data from Titan to adapt the checkpoint frequency to the current reliability of the system using dynamic checkpointing.
 %
 Tiwari et al.~\cite{6903564} also used failure data from Titan and exploited temporal locality in the data to adapt the checkpoint frequency to the current reliability of the system using lazy checkpointing.
+
+Other work in characterizing supercomputer faults, errors and failures focused on the various systems deployed around the world, primarily at US Department of Energy laboratories.
+%
+De et al.~\cite{8809553} developed an in-depth understanding of the failure characteristics of the IBM Blue Gene/Q Mira system at Argonne National Laboratory.
