Added more related work.

--- a/refs.bib
+++ b/refs.bib
@@ -282,3 +282,16 @@ keywords={fault tolerant computing;mainframes;multiprocessing systems;parallel m
 doi={10.1109/DSN.2019.00055}, 
 ISSN={1530-0889}, 
 month={June},}
+
+@INPROCEEDINGS{6903615, 
+author={C. D. {Martino} and Z. {Kalbarczyk} and R. K. {Iyer} and F. {Baccanico} and J. {Fullop} and W. {Kramer}}, 
+booktitle={2014 44th Annual IEEE/IFIP International Conference on Dependable Systems and Networks}, 
+title={Lessons Learned from the Analysis of System Failures at Petascale: The Case of Blue Waters}, 
+year={2014}, 
+volume={}, 
+number={}, 
+pages={610-621}, 
+keywords={Cray computers;failure analysis;mainframes;parallel machines;system recovery;system failure analysis;Blue Waters;Cray hybrid supercomputer;CPU-GPU supercomputer;University of Illinois;Urbana-Champaign;manual failure reports;automatically generated event logs;single-node failures;GPU accelerator;file system error resiliency;system-wide outage analysis;hardware-related failures;memory protection mechanisms;x8 Chip kill;x4 Chip kill;ECC;parity;Lustre file system;Random access memory;Hardware;Graphics processing units;Blades;Maintenance engineering;Error correction codes;Failure Analysis;Failure Reports;Cray XE6;Cray XK7;Supercomputer;Machine Check;Nvidia GPU errors}, 
+doi={10.1109/DSN.2014.62}, 
+ISSN={2158-3927}, 
+month={June},}
