--- a/refs.bib
+++ b/refs.bib
@@ -234,7 +234,7 @@
 @INPROCEEDINGS{7056044, 
 author={D. {Tiwari} and S. {Gupta} and J. {Rogers} and D. {Maxwell} and P. {Rech} and S. {Vazhkudai} and D. {Oliveira} and D. {Londo} and N. {DeBardeleben} and P. {Navaux} and L. {Carro} and A. {Bland}}, 
 booktitle={2015 IEEE 21st International Symposium on High Performance Computer Architecture (HPCA)}, 
-title={Understanding GPU errors on large-scale HPC systems and the implications for system design and operation}, 
+title={Understanding {GPU} errors on large-scale {HPC} systems and the implications for system design and operation}, 
 year={2015}, 
 volume={}, 
 number={}, 
@@ -247,7 +247,7 @@ month={Feb},}
 @INPROCEEDINGS{8665764, 
 author={C. {Zimmer} and D. {Maxwell} and S. {McNally} and S. {Atchley} and S. S. {Vazhkudai}}, 
 booktitle={SC18: International Conference for High Performance Computing, Networking, Storage and Analysis}, 
-title={GPU Age-Aware Scheduling to Improve the Reliability of Leadership Jobs on Titan}, 
+title={{GPU} Age-Aware Scheduling to Improve the Reliability of Leadership Jobs on {Titan}}, 
 year={2018}, 
 volume={}, 
 number={}, 
@@ -260,7 +260,7 @@ month={Nov},}
 @INPROCEEDINGS{6903564, 
 author={D. {Tiwari} and S. {Gupta} and S. S. {Vazhkudai}}, 
 booktitle={2014 44th Annual IEEE/IFIP International Conference on Dependable Systems and Networks}, 
-title={Lazy Checkpointing: Exploiting Temporal Locality in Failures to Mitigate Checkpointing Overheads on Extreme-Scale Systems}, 
+title={Lazy Checkpointing: {Exploiting} Temporal Locality in Failures to Mitigate Checkpointing Overheads on Extreme-Scale Systems}, 
 year={2014}, 
 volume={}, 
 number={}, 
@@ -273,7 +273,7 @@ month={June},}
 @INPROCEEDINGS{8809553, 
 author={S. {Di} and H. {Guo} and E. {Pershey} and M. {Snir} and F. {Cappello}}, 
 booktitle={2019 49th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)}, 
-title={Characterizing and Understanding HPC Job Failures Over The 2K-Day Life of IBM BlueGene/Q System}, 
+title={Characterizing and Understanding {HPC} Job Failures Over The 2K-Day Life of {IBM BlueGene/Q} System}, 
 year={2019}, 
 volume={}, 
 number={}, 
@@ -286,7 +286,7 @@ month={June},}
 @INPROCEEDINGS{6903615, 
 author={C. D. {Martino} and Z. {Kalbarczyk} and R. K. {Iyer} and F. {Baccanico} and J. {Fullop} and W. {Kramer}}, 
 booktitle={2014 44th Annual IEEE/IFIP International Conference on Dependable Systems and Networks}, 
-title={Lessons Learned from the Analysis of System Failures at Petascale: The Case of Blue Waters}, 
+title={Lessons Learned from the Analysis of System Failures at Petascale: {The} Case of {Blue Waters}}, 
 year={2014}, 
 volume={}, 
 number={}, 
