--- a/discussion.tex
+++ b/discussion.tex
@@ -1,3 +1,12 @@
 \section{Discussion}
 \label{sec:discussion}
-\fix{Jim and everyone}
+\fix{Christian, Jim and everyone}
+
+\begin{itemize}
+\item Cray and NVIDIA take care of the hardware and some systems and driver
+  software so moving and troubleshooting hardware is their cost.
+\item Checkpoint strategies, allocation strategies, job resource
+  management, are all under OLCF control. What can OLCF do/change to
+  mitigate fallout in terms of delivering computing to customers when
+  facing machine disasters like the two episodes (2013 and 2016) on Titan?
+\end{itemize}
