--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
             urlcolor={black}]{hyperref}
 \newcommand{\fix}[1]{\textcolor{red}{#1}}
 \newcommand{\pkg}[1]{{\tt #1}}
+\newcommand{\indf}[1]{$\rightarrow$~\textcolor{blue}{#1}}
 
 \begin{document}
 \runningheads{G. Ostrouchov \it{et al.}}{GPU Reliability on Titan Supercomputer}
@@ -56,5 +57,7 @@
 
 \bibliographystyle{unsrt}
 \bibliography{refs}
+
+\input{appendixA}
 
 \end{document}
